Closed
Bug 645044
Opened 15 years ago
Closed 15 years ago
TI: Assertion failure: Call site vanished., at ./methodjit/Compiler.cpp:2452
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Unassigned)
References
Details
(Keywords: assertion, testcase)
The following code asserts on TI tip (run with -m -n -a), tested on 64 bit:
this.__defineGetter__("x", gc);
x.__proto__ = this;
__proto__ = 44;
Comment 1•15 years ago
|
||
JSOP_SETGNAME could walk different compilation paths when assigning __proto__, depending on whether the global object's properties are unknown. This changes things so that we always walk the same path (and don't need the rejoin hooks).
http://hg.mozilla.org/projects/jaegermonkey/rev/93b8d39804d7
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 2•13 years ago
|
||
A testcase for this bug was automatically identified at js/src/jit-test/tests/jaeger/recompile/bug645044.js.
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•