[INFER] Always monitor accesses on __proto__ and similar properties, bug 645044.