js/src/jit-test/tests/jaeger/recompile/bug645044.js
@@ -1,0 +1,4 @@
+
+this.__defineGetter__("x", gc);
+x.__proto__ = this;
+__proto__ = 44;
